# gqlite

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  g.yaml  miserables.gram  movies.gram
.github/workflows/: checks.yml
benches/: frontend_benchmark.rs
docs/: notes.md
features/: README.md
features/backlog/: ExpressionAcceptance.feature  LabelsAcceptance.feature  OptionalMatchAcceptance.feature  SkipLimitAcceptance.feature  StartsWithAcceptance.feature  TemporalAccessorAcceptance.feature  TemporalArithmeticAcceptance.feature  TernaryLogicAcceptance.feature  VarLengthAcceptance.feature
features/supported/: Create.feature  DeleteAcceptance.feature  ReturnAcceptance.feature  WithAcceptance.feature
features/tmp/: MergeIntoAcceptance.feature
gqlite/: Cargo.toml
gqlite-capi/: Cargo.toml
gqlite-capi/src/: lib.rs
gqlite-ffi/: Cargo.toml
gqlite/src/: lib.rs  steps.rs
src/: backend.rs  cypher.pest  frontend.rs  gram.pest  gram.rs  lib.rs  main.rs  steps.rs  yaml.rs
src/backend/: gram.pest  gram.rs  mod.rs
src/backend/gram/: gram.pest  marshal.rs  mod.rs  store.rs
src/backend/t1/: ldbc_populator.rs  mod.rs
src/frontend/: call_stmt.rs  create_stmt.rs  delete_stmt.rs  expr.rs  match_stmt.rs  merge_stmt.rs  mod.rs  patterns.rs  set_stmt.rs  with_stmt.rs
tests/: cucumber.rs
