[package]
name = "gqlite"
version = "0.1.0"
authors = ["Jacob Davis-Hansson <jake@davis-hansson.com>"]
edition = "2018"


[workspace]
members = [
  "gqlite-capi",
]


[lib]
name = "gqlite"
crate-type = ["rlib"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"
clap = { version = "2.33.0", optional = true }
serde = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }

[features]
default = ["gram", "cli"]
cli = ["clap"]
gram = ["serde", "serde_yaml"]
