[package]
name = "gqlite"
version = "0.1.0"
authors = ["Jacob Davis-Hansson <jake@davis-hansson.com>"]
edition = "2018"


[workspace]
members = [
  "gqlite-capi",
]


[lib]
name = "gqlite"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
clap = { version = "2.33.0", optional = true }
pest = "2.0"
pest_derive = "2.0"
rand = "0.7"
serde = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
uuid = { version = "0.8", features = ["v1"] }
json = "0.12"

[features]
default = ["gram", "cli"]
cli = ["clap"]
gram = ["serde", "serde_yaml"]

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.6.0" }
tempfile = "3.1.0"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest
