[package]
name = "gqlite"
version = "0.1.0"
authors = ["Jacob Davis-Hansson <jake@davis-hansson.com>"]
edition = "2018"


[workspace]
members = [
  "gqlite-capi",
]


[lib]
name = "gqlite"
crate-type = ["rlib"]

[[bin]]
name = "g"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
clap = { version = "2.33.0", optional = true }
json = { version = "0.12", optional = true }
pest = "2.0"
pest_derive = "2.0"
rand = { version = "0.7", optional = true }
serde = { version = "1.0.123", optional = true }
serde_yaml = { version = "0.8", optional = true }
uuid = { version = "0.8", features = ["v1"], optional = true }

[features]
default = ["gram", "cli"]
cli = ["clap"]
gram = ["json", "rand", "serde", "serde_yaml", "uuid"]

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.6.0" }
tempfile = "3.1.0"
criterion = "0.3"

[[test]]
name = "cucumber"
required-features = ["gram"]
harness = false # Allows Cucumber to print output instead of libtest

[[bench]]
name = "frontend_benchmark"
harness = false
